# ZPTTLink

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  config.json  config.toml  requirements.txt  setup.py
Software/: run_zpttlink.sh
Software/ZPTTLink/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.json
Software/ZPTTLink/zpttlink/: __init__.py  config.json  ptt.py
docs/: V2_0_0_PLAN.md
zpttlink/: __init__.py  __main__.py  audio.py  config.json  gui.py  main.py  ptt.py  pyproject.toml
zpttlink/.github/workflows/: build.yml  test.yml
zpttlink/radio/: __init__.py  base.py  cm108.py  digirig.py  signalink.py
